# nlpia2

./: .dockerignore  .gitignore  .gitlab-ci.yml  .workon  Dockerfile  environment.yml  lda_toxicity_3d_scatter.html  pyproject.toml  release.sh  requirements.txt  run
coreferee/: coreferee.hist.ipy  coreferee.hist.py  coreferee_works.hist.ipy  requirements.detailed.txt  requirements.fixed.txt  requirements.txt
docs/: Appendix B -- Playful Python and Regular Expressions.adoc.py.ipynb  Appendix C -- Vectors and Matrices (Basic Linear Algebra).adoc.py.ipynb  Appendix D -- Machine Learning.adoc.py.ipynb  Appendix F -- Locality Sensitive Hashing.adoc.py.ipynb  Chapter-01_Machines-that-can-read-and-write-NLP-overview.adoc.py.ipynb  Chapter-02_Tokens-of-thought-natural-language-words.adoc.py.ipynb  Chapter-03_Math-with-Words-TF-IDF-Vectors.adoc.py.ipynb  Chapter-04_Finding-Meaning-in-Word-Counts-Semantic-Analysis.adoc.py.ipynb  Chapter-05_Word-Brain-artificial-neural-networks-for-NLP.adoc.py.ipynb  Chapter-06_Reasoning-with-word-embeddings-word-vectors.adoc.py.ipynb  Chapter-07_Finding-Kernels-of-Knowledge-in-Text-with-Convolutional-Neural-Networks-CNNs.adoc.py.ipynb  Chapter-08_Reduce,-Reuse,-Recycle-Recurrent-Neural-Networks.adoc.py.ipynb  Chapter-09_Stackable-deep-learning-Transformers.adoc.py.ipynb  Chapter-10_Large-Language-Models-in-the-Real-World.adoc.py.ipynb  Chapter-11_Information-extraction-and-knowledge-graphs-(grounding).adoc.py.ipynb  Chapter-11_Information-extraction-and-knowledge-graphs-grounding.adoc.py.ipynb  Chapter-12_Getting-chatty-dialog-engines.adoc.py.ipynb  Glossary.adoc.py.ipynb  Lane3_Errata_01.html  Makefile  Quickstart-faq-bot.ipynb  README-windows-install.md  ch05-resources.md  ch06_dota2_wiki_heroes.hist.ipy.md  ch06_dota2_wiki_heroes.hist.py  ch11-todo-information-extraction.md  conf.py  coreferee_notes.md  downloadable_bigdata_directory.yml  index.rst  open-source-llms.md  test_coreferee.md
exercises/: tokenization.ipynb
scripts/: Pipfile.bak  adoc2yaml.py  bash_functions.sh  build_setup.sh  check_env.py  clean.sh  clean_ipy.sh  cleanpyc.sh  dont_test_qa_bots.py  dont_test_qa_skill.py  download_eedi.sh  download_gdrive.py  entrypoint.sh  environment.export.yml  environment.pinned.yml  environment.unpinned.yml  environment.yml  extract_code.py  extract_code.sh  extract_code_lines_csv.py  extract_long_code_lines_csv.py  find_large_files.sh  generate_alttext.hist.py  git-rename-chapter-files-only.py  git-rename-commands.sh  git_rename_ch_1_3_adoc_files_only.py  install.sh  install_dependencies.sh  install_editable.sh  make_outline.py  make_outline.sh  pin_requirements.py  poetry_export_conda.py  publish.sh  refresh_manuscript.sh  remove_large_files.py  requirements.2023-08-13.txt  setup.cfg.broke  setup.py  setup.py.bak  (+4 more)
src/nlpia2/: util.py
src/nlpia2/bonus/ipython-sessions/: quotes_language_model_first_order_markhov_chain.ipy
src/nlpia2/ch02/: bug-report-reader-dominick-bug-one-hot-encoding-NLP-2-ch2.ipynb
src/nlpia2/ch05/: ch05-name-sex-index-weighted-by-count-pytorch-tuned-learning-book-code.ipynb  ch05-name-sex-index-weighted-by-count-pytorch-tuned-learning-rate-deduped-testset.ipynb
src/nlpia2/ch06/: heatmap_ch03_sentence_similarity.ipynb  pytorch_word2vec_wikipedia_ch06.ipynb  pytorch_word2vec_wikipedia_ch06_ukraine.ipynb
src/nlpia2/ch07/: ch07_notebook.ipynb  decoding_morse.ipynb
src/nlpia2/ch07/cnn/data/: trec.csv
src/nlpia2/ch07/cnn/experiments/: train79.hyperparams.json
src/nlpia2/ch07/hist/: cnn_pretrained_spacy_embeddings.hist.md
src/nlpia2/ch08/hist/: hh_datasets_descriptions_email.hist.md
src/nlpia2/ch08/rnn_word/checkpoint_notes/grid_search/: experiments.json
src/nlpia2/ch10/: chat-with-llama2.hist.ipy  model01_tutorial_pytorch_loop.ipynb  question_answering_with_haystack.ipynb
src/nlpia2/ch11/: ch3-heatmap-minibert.hist.ipy  timnit-gebru-spacy-ents.hist.ipy
src/nlpia2/ch12/inc/preprocessing/json/: misc_replacements.json
src/nlpia2/data/: 2303.18223 - A Survey of LLMs.txt  2303.18223 - A Survey of LLMs.txt.md  evaluation.csv  llm_sizes_scatter_2024.html  my-graph.html  rtd_pages.yml
src/nlpia2/data/kg/: knowledge.plotly.html
src/nlpia2/data/manuscript/py/: Chapter-09_Stackable-deep-learning-Transformers.OLDVERSION.adoc.py  Chapter-14_Scaling-up-optimization,-parallelization,-and-batch-processing.adoc.py
src/nlpia2/data/meuller/: report-redacted.txt  report-unredacted.txt  report-unredacteds.html  reports-redacted.html
src/nlpia2/data/pwc/: evaluations.csv  task.csv
tests/: donttest_manuscript.py  test_doctests.py
