[build-system]
requires = [
    "setuptools>=60",
#    "setuptools-scm>=8.0",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "nlpia2"
version = "0.0.43"
# # Let setuptools read git tags or knowt.__version__ attribute for the version number
# dynamic = ["version"]
description = "Natural language processing utilities and examples for the book Natural Language Processing in Action (nlpia) 2nd Edition by Hobson Lane and Maria Dyshel."
license = {text = "GPLv3+"}
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Hobson Lane", email = "git@totalgood.com"},
    {name = "Ethan Cavill", email = "ethancavill@gmail.com"},
    {name = "Maria Dyshel", email = "maria@tangibleai.com"},
    {name = "Geoffrey Marshal"},
    {name = "Sylvia Lee"},   
    {name = "Greg Thompson", email = "greg@tangibleai.com"},   
    {name = "Winnie Yeung @dcvionwinnie"},
    {name = "Leo Hepis", email = "leo@leohepis.com"},
    {name = "Mohammed Dala Ali", email = "mms.dala@gmail.com"},
    {name = "Alex Rosengarten @alxrsngrtn"},
]
# authors = [ , " <>", "Geoffrey Marshal", "Sylvia Lee", , " <>", "", "Jose Robins @jorobins",]
# homepage = "https://gitlab.com/tangibleai/nlpia2"
# repository = "https://gitlab.com/tangibleai/nlpia2"
# documentation = "https://gitlab.com/tangibleai/nlpia2"
keywords = ["NLP", "Natural Language Processing", "Virtual Assistant", 
    "chatbot", "LLM", "vector-search", "Text Processing", "Machine Learning",
    "Text Mining", "Deep Learning", "numpy", "search", "semantic search", "RAG", 
    "personal assistant", "command line", "text generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    # "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing", "Topic :: Communications",
    "Topic :: Communications :: Chat", "Intended Audience :: Education",
    ]
dependencies = [
    # "babel>=2.12.1",
    "beautifulsoup4>=4.12",
    "bidict>=0.22.1",
    # "bleach>=6.0.0",
    "boto3>=1.34.6",
    "configargparse>=1.7",
    "cython>=3.0",
    # dataframe-image>=0.1.12",
    "dateparser>=1.1.8",
    # "django>=4.2.4",
    "edit-distance>=1.0.6",
    "einops>=0.6.1",
    "fuzzywuzzy",
    # "environment>=1.0.0",
    # "evaluate>=0.4.0",
    "fastapi>=0.105.0",
    # "gitpython>=3.1.32",
    "gradio>3.0,<4.0",
    "h5py>=3.9.0",
    "huggingface-hub>=0.16.4",
    "html2text>=2020.1.16",
    # "html5lib>=1.1",
    "ipython",
    "joblib>=1.3.2,<1.4",
    "jsonlines>=3.1.0",
    "jupyter",
    "jupyter-console",
    "jupyterlab>=4.0.10",
    "jupyter-console>=6.6.3",
    # "jupyter-server>=2.12.5",
    
    # coreferee = "*",
    #    spacy==3.5.4  # coreferre requires spacy<3.6,
    "langchain>=0.0.265",
    "lxml>=4.9.3",
    "matplotlib==3.7.2",
    "matplotlib-inline",
    "meilisearch",
    "mistune>=3.0.1",
    "nessvec>=0.1.14",
    "nlpia2-wikipedia>=1.5.14",
    "nltk>=3.8.1",
    "numpy>=1.26.2,<1.27",
    # "notebook>=7.0.6",
    "openai>=0.27.8",
    "pandas>=2.2.0,<2.3",  # pandas-gbq>=*"  # pandas oauthlib requests google-auth requests-oathlib proto-plus urllib3 pyarrow pytz python-dateutil,
    # "parsimonious>=0.10.0,<0.11",
    "pynndescent>=0.5.10,<0.6",
    "pytest-coverage",

    "pip",
    "plotly",
    "poetry",
    "pronouncing>=0.2.0,<0.3",
    "psutil>=5.9.5,<5.10",
    # "pypdf2>=3.0.1,4.0",
    # "python>=3.9",
    "python-dotenv>=1.0.0",
    # "python-lsp-server",
    # "python-slugify>=8.0.1",
    "pyvis>=0.3.2",
    # "recommonmark>=0.7.1",
    # "sacrebleu>=2.3.1",
    #    huggingface-hub,
    #    joblib==1.3.2,

    #    sentencepiece==0.1.99,
    #    tokenizers==0.15.0,
    #    torchvision,
    #        pillow,
    #    transformers,
    #        regex==2023.10.3,
    "scikit-learn>=1.3.2,<1.4",     # scipy==1.11.4,joblib,numpy,threadpoolctl,
    "seaborn>=0.13.0",  # pandas fonttools matplotlib numpy contourpy cycler pillow packaging python-dateutil pytz tzdata six,
    "sentence_transformers>=2.2.2",
    "spacy>=3.7.2,<3.8",
    "spacy-experimental",
    "sphinx>=7.1.2",
    "streamlit>=1.25.0",
    "textacy>=0.13.0",
    "toml>=0.10.2",
    "tox>=4.8.0",
    "tqdm>=4.66.1",
    "unidecode>=1.3.6",
    "xmltodict>=0.13.0",
  ]

[tool.setuptools.package-data]
knowt = [
    "src/nlpia2/data",
]

[[tool.poetry.packages]]
include = "nlpia2"
from = "src"

[tool.poetry.scripts]
cnn = "nlpia2.ch07.cnn:main"
adoc_extract = "nlpia2.text_processing.extractors:main"

[tool.poetry.dependencies]
babel = "^2.12.1"
beautifulsoup4 = "^4.12"
bidict = "^0.22.1"
bleach = "^6.0.0"
boto3 = "^1.34.6"
botocore = "^1.31.27"
configargparse = "^1.7"
# coreferee = "*"
#    spacy==3.5.4  # coreferre requires spacy<3.6
cython = "^3.0"
# dataframe-image = "^0.1.12"
dateparser = "^1.1.8"
django = "^4.2.4"
edit-distance = "^1.0.6"
einops = "^0.6.1"
environment = "^1.0.0"
evaluate = "^0.4.0"
fastapi = "^0.105.0"
gitpython = "^3.1.32"
h5py = "^3.9.0"
huggingface-hub = "^0.16.4"
html2text = "^2020.1.16"
html5lib = "^1.1"
jsonlines = "^3.1.0"
jupyterlab = "^4.0.10"
jupyter-console = "^6.6.3"
jupyter-server = "^2.12.5"
langchain = "^0.0.265"
lxml = "^4.9.3"
# matplotlib = "==3.7.2"
matplotlib-inline = "*"
meilisearch = "*"
# mistune = "^3.0.1"
# nessvec = ">=0.1.14"
nlpia2-wikipedia = ">=1.5.14"
nltk = "^3.8.1"
notebook = "^7.0.6"
openai = "^0.27.8"
pandas = "^2.1.4"
# pandas-gbq = "*"  # pandas oauthlib requests google-auth requests-oathlib proto-plus urllib3 pyarrow pytz python-dateutil
pynndescent = "^0.5.10"
parsimonious = "^0.10.0"
pip = "*"
plotly = "*"
poetry = "*"
pronouncing = "^0.2.0"
psutil = "^5.9.5"
pypdf2 = "^3.0.1"
python = ">=3.9"
python-dotenv = "^1.0.0"
python-lsp-server = "*"
python-slugify = "^8.0.1"
pyvis = ">=0.3.2"
recommonmark = "^0.7.1"
sacrebleu = "^2.3.1"
streamlit = "^1.25.0"
seaborn = "^0.13.0"  # pandas fonttools matplotlib numpy contourpy cycler pillow packaging python-dateutil pytz tzdata six
sentence_transformers = "2.2.2"
#    huggingface-hub
#    joblib==1.3.2
#    scikit-learn==1.3.2
#        scipy==1.11.4
#        joblib
#        numpy
#        threadpoolctl
#    sentencepiece==0.1.99
#    tokenizers==0.15.0
#    torchvision
#        pillow
#    transformers
#        regex==2023.10.3
spacy = "3.7.2"  # coreferre requires spacy<3.6 and textacy requires > 3.5
spacy-experimental = "*"
sphinx = "^7.1.2"
textacy = "0.13.0"
#     spacy>=3.5
toml = "^0.10.2"
tox = "^4.8.0"
tqdm = "^4.66.1"
unidecode = "^1.3.6"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
tox = "*"
pytest-cov = "*"
pylint = "*"
pre-commit = "*"
deepdiff = "*"
httpretty = "*"
flatdict = "*"
pydocstyle = "*"

# # Neither of these blocks creates working extras packages e.g. pip install -e ".[test]" fails
# [tool.poetry.extras]
# test = [ "pytest", "pytest-cov",]
# sound = [ "soundex",]
# pdf = [ "pymupdf", "tabula-py", "tabulate",]
# graph = [ "graphviz",]

# # This block forces farm-haystack to be installed as a dependency of nlpia2
# [tool.poetry.dependencies.farm-haystack]
# version = "*"
# extras = [ "faiss",]


